--- a/frontend/src/components/TaskItem.module.css
+++ b/frontend/src/components/TaskItem.module.css
@@ -5,11 +5,11 @@
   justify-content: flex-start;
   align-items: center;
   column-gap: 0.25rem;
+  border-bottom: 1px solid var(--color-text-secondary);
 }
 
 .textContainer {
   height: 100%;
-  border-bottom: 1px solid var(--color-text-secondary);
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -29,6 +29,7 @@
 }
 
 .taskLink {
+  display: flex;
   text-decoration: none;
   color: inherit;
 }
@@ -36,6 +37,12 @@
 .taskLink:hover {
   text-decoration: underline;
   color: inherit;
+}
+
+.userTag {
+  flex-shrink: 0;
+  width: 150px;
+  color: var(--color-text-primary);
 }
 
 .title {
